fix toc spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,11 +22,6 @@ html {
   }
 }
 
-.page__title+.page__meta,
-.page__title+.comment__date {
-  margin-top: -calc(#{$--content-size} / 2);
-}
-
 .page__inner-wrap {
   header>* {
     margin-bottom: $--content-size;
@@ -91,6 +86,8 @@ html {
   }
 
   .sidebar__right {
+    margin-bottom: $--content-size;
+
     li {
       font-size: 1em;
     }
